# linear-regression-from-scratch

./: README.md  pyproject.toml
src/linear_regression_from_scratch/: __init__.py  functions.py  main.py
