[project]
name = "linear-regression-from-scratch"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "matplotlib>=3.9.1",
    "pyqt6>=6.7.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/linear_regression_from_scratch"]
